gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.solo.io/v1","kind":"Gateway","metadata":{"annotations":{"meta.helm.sh/release-name":"gloo","meta.helm.sh/release-namespace":"gloo-system"},"creationTimestamp":"2021-02-01T19:05:10Z","generation":31,"labels":{"app":"gloo","app.kubernetes.io/managed-by":"Helm"},"managedFields":[{"apiVersion":"gateway.solo.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:meta.helm.sh/release-name":{},"f:meta.helm.sh/release-namespace":{}},"f:labels":{" [...]
    meta.helm.sh/release-name: gloo
    meta.helm.sh/release-namespace: gloo-system
  creationTimestamp: "2021-02-01T19:05:10Z"
  generation: 32
  labels:
    app: gloo
    app.kubernetes.io/managed-by: Helm
  managedFields:
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/managed-by: {}
      f:spec:
        .: {}
        f:bindAddress: {}
        f:bindPort: {}
        f:httpGateway: {}
        f:proxyNames: {}
        f:useProxyProto: {}
    manager: Go-http-client
    operation: Update
    time: "2021-02-01T19:05:10Z"
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:reportedBy: {}
        f:state: {}
        f:subresourceStatuses:
          .: {}
          f:*v1.Proxy.gloo-system.gateway-proxy:
            .: {}
            f:reportedBy: {}
            f:state: {}
    manager: gateway
    operation: Update
    time: "2021-02-02T15:31:21Z"
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:httpGateway:
          f:options:
            .: {}
            f:httpConnectionManagerSettings:
              .: {}
              f:useRemoteAddress: {}
    manager: kubectl-patch
    operation: Update
    time: "2021-02-02T17:20:18Z"
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:httpGateway:
          f:options:
            f:healthCheck:
              .: {}
              f:path: {}
        f:options:
          .: {}
          f:accessLoggingService: {}
    manager: kubectl-edit
    operation: Update
    time: "2021-02-02T19:34:52Z"
  - apiVersion: gateway.solo.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:options:
          f:accessLoggingService:
            f:accessLog: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-02-02T23:38:48Z"
  name: gateway-proxy
  namespace: gloo-system
  resourceVersion: "1477512"
  selfLink: /apis/gateway.solo.io/v1/namespaces/gloo-system/gateways/gateway-proxy
  uid: 382d67ee-00c0-45e3-bd7f-aadab80d55d1
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway:
    options:
      healthCheck:
        path: /check/healthz
      httpConnectionManagerSettings:
        useRemoteAddress: true
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          jsonFormat:
            duration: '%DURATION%'
            protocol: '%PROTOCOL%'
            upstreamCluster: '%UPSTREAM_CLUSTER%'
            upstreamHost: '%UPSTREAM_HOST%'
          path: /dev/stdout
  proxyNames:
  - gateway-proxy
  useProxyProto: false
status:
  reportedBy: gateway
  state: 1
  subresourceStatuses:
    '*v1.Proxy.gloo-system.gateway-proxy':
      reportedBy: gloo
      state: 1
